@@ -59,7 +59,7 @@ the URL to point to a current snapshot):
 .Dl anita install http://nyftp.netbsd.org/pub/NetBSD-daily/HEAD/201001280000Z/i386/
 .Dl anita install http://nyftp.netbsd.org/pub/NetBSD-daily/HEAD/201008070000Z/iso/sparccd.iso
 .Pp
-If you have built NetBSD locally using 
+If you have built a NetBSD release locally using 
 .Ic "build.sh -R" , 
 you can point
 .Nm
